added css sheet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta nane="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<body>
+    <header>
+        <h1>Activity 22 Website</h1>
+    </header>
+
+    <section>
+        <h2>This Is a Section</h2>
+        <figure>
+            <img src="./assets/images/mintybulb.png" alt="Bulbasaur 001" width="300px" height="300px"/>
+            <figcaption>My Minty Bulbasaur!</figcaption>
+        </figure>
+
+    </section>
+</body>
 
 
 </html>
