--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta nane="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activity 22</title>
+    <link rel="stylesheet" type = "text/css" href="./assets/styles.css">
 </head>
 <body>
     <header>
