more html & css + links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
     <header>
         <h1>Activity 22 Website</h1>
+        <nav>
+            <ul id="navbar">
+              <li class="links"><a href="#">About</a></li>
+              |
+              <li class="links"><a href="#">Dont Click Here</a></li>
+              |
+              <li class="links"><a href="#">Contact</a></li>
+            </ul>
+          </nav>
     </header>
 
     <section>
@@ -18,8 +27,20 @@
             <img src="./assets/images/mintybulb.png" alt="Bulbasaur 001" width="300px" height="300px"/>
             <figcaption>My Minty Bulbasaur!</figcaption>
         </figure>
-
+        <p> Hey this is a test. Another test. That's it.</p>
     </section>
+    <section class="contactform">
+         <h2>Contact Form</h2>
+            <ul>
+                <li>Name:</li>
+                <li>Phone Number:</li>
+                <li>Email Address:</li></lie>
+            </ul>
+    </section>
+
+    <footer>
+        <p> I can code, I think!</p>
+    </footer>
 </body>
 
 
