--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               |
               <li class="links"><a href="#">Dont Click Here</a></li>
               |
-              <li class="links"><a href="#">Contact</a></li>
+              <li class="links"><a href="#contactform">Contact</a></li>
             </ul>
           </nav>
     </header>
@@ -29,14 +29,18 @@
         </figure>
         <p> Hey this is a test. Another test. That's it.</p>
     </section>
-    <section class="contactform">
+    <form id="contactform" class="contactform">
          <h2>Contact Form</h2>
-            <ul>
-                <li>Name:</li>
-                <li>Phone Number:</li>
-                <li>Email Address:</li></lie>
-            </ul>
-    </section>
+            <label for = "name">Name:</label>
+            <input type ="text" id ="name" name = "clientname" placeholder = "First Last">
+            <br>
+            <br>
+            <label for = "email"> Email:</label>
+            <input type = "email" id = "email" name = "clientemail" placeholder = "Email@address.com">
+            <br>
+            <br>
+            <input type="submit" value="Send">
+        </form>
 
     <footer>
         <p> I can code, I think!</p>
