changed repo name; changed header and footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Activity 22 Website</h1>
+        <h1>LANDING PAGE</h1>
         <nav>
             <ul id="navbar">
               <li class="links"><a href="#">About</a></li>
@@ -43,7 +43,7 @@
         </form>
 
     <footer>
-        <p> I can code, I think!</p>
+       I can code, I think!
     </footer>
 </body>
 
